--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 
     <!-- Add your site or application content here -->
     <div class="header">
-      <div class="navbar navbar-default" role="navigation">
+      <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
 
@@ -33,28 +33,114 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">host</a>
+            <a href="#" class="navbar-brand nav_logo">
+              <img src="images/logo_02.png" alt=".">
+            </a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li class="dropdown">
+              <a href="" class="dropdown-toggle" data-toggle="dropdown">
+                产品方案
+              </a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">粉丝数据管理</a></li>
+                  <li class="divider"></li>
+                  <li><a ui-sref="tab.marketing">精细化营销</a></li>
+                  <li class="divider"></li>
+                  <li><a href="#">KOL红人投放</a></li>
+                  <li class="divider"></li>
+                  <li><a href="#">微信应用商店</a></li>
+                  <li class="divider"></li>
+                  <li><a href="#">手机App</a></li>
+                </ul>
+              </li>
+              <li><a href="#">客户案例</a></li>
+              <li><a href="#">服务价格</a></li>
+              <li><a ui-sref="tab.agent">渠道代理</a></li>
+              <li><a href="#">帮助中心</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li>
+                <a href="#">
+                  <span class="glyphicon glyphicon-log-in"></span>
+                    登录
+                </a>
+              </li>
+              <li>
+                <a href="#"><span class="glyphicon glyphicon-user"></span> 注册</a></li>
+              
             </ul>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="container">
+    <!-- <div class="container"> -->
     <div ng-view=""></div>
-    </div>
+    <!-- </div> -->
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <div class="footer_left">  
+                <a ng-href="#/about">
+                  关于侯斯特
+                </a><br>
+                <a>
+                  使用协议
+                </a><br>
+                <a>
+                  合作伙伴
+                </a><br>
+            </div>
+            <div class="footer_mid">
+                <a>
+                  粉丝数据管理
+                </a><br>
+                <a ui-sref="tab.marketing">
+                  精细化营销
+                </a><br>
+                <a>
+                  KOL红人投放
+                </a><br>
+                <a>
+                  微信应用商店
+                </a><br>
+                <a>
+                  手机App
+                </a><br>
+            </div>
+            <div class="footer_mid_img">
+                关注我们及APP下载<br>
+                <div class= "footer_img">
+                  <a href="#" class="footer_img1">
+                  </a>
+                  <a href="http://weibo.com/wechathost" class="footer_img2" target=_blank>
+                  </a>
+                  <a href="#" class="footer_img3">
+                  </a>
+                </div>
+            </div>
+            <div class="footer_right">
+                商务洽谈：
+                <a href="mailto:contact@weixinhost.com">
+                  contact@weixinhost.com
+                </a><br>
+                加入我们：
+                <a href="mailto:hr@weixinhost.com">
+                  hr@weixinhost.com
+                </a><br>
+                客服电话：
+                <a href="tel:4006-110-680">
+                  4006-110-680
+                </a><br>
+            </div>
+            <div class="footer_bottom">
+              © Copyright 2016 北京侯斯特网络科技有限公司 京ICP备14034751号
+            </div>
+
       </div>
     </div>
 
