修改链接地址

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a href="#" class="navbar-brand nav_logo">
+            <a href="#/" class="navbar-brand nav_logo">
               <img src="images/logo_02.png" alt=".">
             </a>
           </div>
