添加合作伙伴界面

--- a/app/index.html
+++ b/app/index.html
@@ -91,7 +91,7 @@
                 <a>
                   使用协议
                 </a><br>
-                <a>
+                <a ng-href="#/partners">
                   合作伙伴
                 </a><br>
             </div>
