增加使用协议界面
增加使用协议界面和路由

--- a/app/index.html
+++ b/app/index.html
@@ -88,7 +88,7 @@
                 <a ng-href="#/about">
                   关于侯斯特
                 </a><br>
-                <a>
+                <a ng-href="#/term">
                   使用协议
                 </a><br>
                 <a ng-href="#/partners">
@@ -176,6 +176,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/partners.js"></script>
+        <script src="scripts/controllers/term.js"></script>
         <!-- endbuild -->
 </body>
 </html>
