增加外部链接

--- a/app/index.html
+++ b/app/index.html
@@ -46,21 +46,21 @@
                 产品方案
               </a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">粉丝数据管理</a></li>
+                  <li><a href="http://scrm.weixinhost.com/">粉丝数据管理</a></li>
                   <li class="divider"></li>
                   <li><a ui-sref="tab.marketing">精细化营销</a></li>
                   <li class="divider"></li>
-                  <li><a href="#">KOL红人投放</a></li>
+                  <li><a href="http://kol.wx-services.com/" target=_blank>KOL红人投放</a></li>
                   <li class="divider"></li>
                   <li><a href="#">微信应用商店</a></li>
                   <li class="divider"></li>
-                  <li><a href="#">手机App</a></li>
+                  <li><a href="https://itunes.apple.com/cn/app/hou-si-te-gong-zhong-zhang/id867350536?l=en&mt=8" target=_blank>手机App</a></li>
                 </ul>
               </li>
               <li><a href="#">客户案例</a></li>
               <li><a href="#">服务价格</a></li>
               <li><a ui-sref="tab.agent">渠道代理</a></li>
-              <li><a href="#">帮助中心</a></li>
+              <li><a href="http://help.weixinhost.com/hc/" target=_blank>帮助中心</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li>
@@ -96,19 +96,19 @@
                 </a><br>
             </div>
             <div class="footer_mid">
-                <a>
+                <a href="http://scrm.weixinhost.com/">
                   粉丝数据管理
                 </a><br>
                 <a ui-sref="tab.marketing">
                   精细化营销
                 </a><br>
-                <a>
+                <a href="http://kol.wx-services.com/" target=_blank>
                   KOL红人投放
                 </a><br>
                 <a>
                   微信应用商店
                 </a><br>
-                <a>
+                <a href="https://itunes.apple.com/cn/app/hou-si-te-gong-zhong-zhang/id867350536?l=en&mt=8" target=_blank>
                   手机App
                 </a><br>
             </div>
