营销推送的代码添加

--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="http://scrm.weixinhost.com/">粉丝数据管理</a></li>
                   <li class="divider"></li>
-                  <li><a ui-sref="tab.marketing">精细化营销</a></li>
+                  <li><a ng-href="#/marketing_push">精细化营销</a></li>
                   <li class="divider"></li>
                   <li><a href="http://kol.wx-services.com/" target=_blank>KOL红人投放</a></li>
                   <li class="divider"></li>
@@ -177,6 +177,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/partners.js"></script>
         <script src="scripts/controllers/term.js"></script>
+        <script src="scripts/controllers/marketing_push.js"></script>
         <!-- endbuild -->
 </body>
 </html>
