渠道代理页面添加

--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
               </li>
               <li><a href="#">客户案例</a></li>
               <li><a href="#">服务价格</a></li>
-              <li><a ui-sref="tab.agent">渠道代理</a></li>
+              <li><a ng-href="#/agent">渠道代理</a></li>
               <li><a href="http://help.weixinhost.com/hc/" target=_blank>帮助中心</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -178,6 +178,7 @@
         <script src="scripts/controllers/partners.js"></script>
         <script src="scripts/controllers/term.js"></script>
         <script src="scripts/controllers/marketing_push.js"></script>
+        <script src="scripts/controllers/agent.js"></script>
         <!-- endbuild -->
 </body>
 </html>
