热门应用的页面和样式

--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
                   <li class="divider"></li>
                   <li><a href="http://kol.wx-services.com/" target=_blank>KOL红人投放</a></li>
                   <li class="divider"></li>
-                  <li><a href="#">微信应用商店</a></li>
+                  <li><a ng-href="#/appstore">微信应用商店</a></li>
                   <li class="divider"></li>
                   <li><a href="https://itunes.apple.com/cn/app/hou-si-te-gong-zhong-zhang/id867350536?l=en&mt=8" target=_blank>手机App</a></li>
                 </ul>
@@ -64,13 +64,13 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li>
-                <a href="#">
+                <a href="http://client.weixinhost.com/login.html" target=_blank>
                   <span class="glyphicon glyphicon-log-in"></span>
                     登录
                 </a>
               </li>
               <li>
-                <a href="#"><span class="glyphicon glyphicon-user"></span> 注册</a></li>
+                <a href="http://client.weixinhost.com/register.html" target=_blank><span class="glyphicon glyphicon-user"></span> 注册</a></li>
               
             </ul>
           </div>
@@ -179,6 +179,7 @@
         <script src="scripts/controllers/term.js"></script>
         <script src="scripts/controllers/marketing_push.js"></script>
         <script src="scripts/controllers/agent.js"></script>
+        <script src="scripts/controllers/appstore.js"></script>
         <!-- endbuild -->
 </body>
 </html>
