--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
                 </ul>
               </li>
               <li><a ng-href="#/example">客户案例</a></li>
-              <li><a href="#">服务价格</a></li>
+              <li><a ng-href="#/pricing">服务价格</a></li>
               <li><a ng-href="#/agent">渠道代理</a></li>
               <li><a href="http://help.weixinhost.com/hc/" target=_blank>帮助中心</a></li>
             </ul>
@@ -193,6 +193,7 @@
         <script src="scripts/controllers/agent.js"></script>
         <script src="scripts/controllers/appstore.js"></script>
         <script src="scripts/controllers/example.js"></script>
+        <script src="scripts/controllers/pricing.js"></script>
         <!-- endbuild -->
 </body>
 </html>
