--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/swiper/dist/css/swiper.css" />
     <link rel="stylesheet" href="bower_components/flickity/css/flickity.css" />
+    <link rel="stylesheet" href="bower_components/owl.carousel/dist/assets/owl.carousel.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -180,6 +181,7 @@
     <script src="bower_components/tap-listener/tap-listener.js"></script>
     <script src="bower_components/unidragger/unidragger.js"></script>
     <script src="bower_components/flickity/js/index.js"></script>
+    <script src="bower_components/owl.carousel/dist/owl.carousel.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
