首页样式修改完成

--- a/app/index.html
+++ b/app/index.html
@@ -182,6 +182,7 @@
     <script src="bower_components/unidragger/unidragger.js"></script>
     <script src="bower_components/flickity/js/index.js"></script>
     <script src="bower_components/owl.carousel/dist/owl.carousel.js"></script>
+    <script src="bower_components/countUp.js/dist/countUp.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
