底端添加二维码扫描

--- a/app/index.html
+++ b/app/index.html
@@ -102,13 +102,13 @@
                 <a href="http://scrm.weixinhost.com/">
                   粉丝数据管理
                 </a><br>
-                <a ui-sref="tab.marketing">
+                <a ng-href="#/marketing_push">
                   精细化营销
                 </a><br>
                 <a href="http://kol.wx-services.com/" target=_blank>
                   KOL红人投放
                 </a><br>
-                <a>
+                <a ng-href="#/appstore">
                   微信应用商店
                 </a><br>
                 <a href="https://itunes.apple.com/cn/app/hou-si-te-gong-zhong-zhang/id867350536?l=en&mt=8" target=_blank>
@@ -118,11 +118,19 @@
             <div class="footer_mid_img">
                 关注我们及APP下载<br>
                 <div class= "footer_img">
-                  <a href="#" class="footer_img1">
-                  </a>
+                  <!-- <a href="#" class="footer_img1" >
+                  </a> -->
+                  <a href="" class="footer_img1 icon-chat">
+                    <div class="chat-tips">
+                      <img src="images/erweima@3x.png" alt="微信订阅号">
+                    </div>
+                  </a> 
                   <a href="http://weibo.com/wechathost" class="footer_img2" target=_blank>
                   </a>
-                  <a href="#" class="footer_img3">
+                  <a href="#" class="footer_img3 icon-chat">
+                    <div class="chat-tips">
+                      <img src="images/apperweima@3x.png" alt="苹果APP">
+                    </div>
                   </a>
                 </div>
             </div>
